--- a/xhs_scraper/Dockerfile
+++ b/xhs_scraper/Dockerfile
@@ -10,6 +10,10 @@ COPY . /app
 # 安装 Python 依赖
 RUN pip install --no-cache-dir -r requirements.txt
 
+# 安装 tzdata (用于设置时区)，使用非交互模式
+ENV DEBIAN_FRONTEND=noninteractive
+RUN apt-get update && apt-get install -y tzdata && rm -rf /var/lib/apt/lists/*
+
 # 创建结果目录（确保有权限写入）
 RUN mkdir -p res_docs && chmod 777 res_docs
 
@@ -18,6 +22,9 @@ RUN mkdir -p res_docs && chmod 777 res_docs
 ENV HEADFUL=false
 # 设置 Python 输出不缓冲，方便查看日志
 ENV PYTHONUNBUFFERED=1
+# 设置时区为上海
+ENV TZ=Asia/Shanghai
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 # 运行调度脚本
 CMD ["python", "scheduler.py"]
